# video_to_gif_in_python

./: pyproject.toml
video_to_gif_in_python/: main.py
